fix: chat growing too much when long message was added

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,6 +15,7 @@ html,body,#root{
   background-color: rgb(26, 23, 23);
 
   height: 100vh;
+  width: 100vw;
 
 }
 
@@ -39,11 +40,16 @@ html,body,#root{
 
 .Chat{
   flex-grow: 1;
+  min-width: 100px;
+  width: 25%;
 }
 
 .Game{
   flex-grow: 4;
   background-color: #282c34;
+  min-width:100px;
+  width: 60;
+
 }
 
 
